fixed file path

--- a/Daily_Updates/daily.html
+++ b/Daily_Updates/daily.html
@@ -38,7 +38,7 @@
 <div id="clearDataModal" class="hidden fixed inset-0 bg-gray-600 bg-opacity-50 flex items-center justify-center">
   <div class="bg-white rounded-lg p-6 shadow-lg">
     <h2 class="text-lg font-semibold mb-4">Formatting Error?</h2>
-    <a href="/Daily_Updates/formatter.html" class="underline">
+    <a href="https://gabriel-dalton.github.io/velocity-tracker-tks/Daily_Updates/formatter.html" class="underline">
       <p class="text-sm text-gray-600 mb-4">Visit the Slack to Dropbox Paper Formatter Page</p>
     </a>
     <h2 class="text-lg font-semibold mb-4">Clear Form Data</h2>
