--- a/Daily_Updates/daily.html
+++ b/Daily_Updates/daily.html
@@ -204,9 +204,19 @@
 
       <div>
         <label class="block font-semibold mb-2">Rate Your Day</label>
-        <input type="range" id="dayScore" min="1" max="10" step="0.5" value="5" class="w-full" oninput="updateDayScore(); saveToCookies()">
+        <input 
+          type="range" 
+          id="dayScore" 
+          min="1" 
+          max="10" 
+          step="0.5" 
+          value="10" 
+          class="w-full" 
+          oninput="updateDayScore(); saveToCookies()"
+        >
         <p class="text-center mt-2" id="dayScoreValue">5</p>
       </div>
+      
 
       <div>
         <label class="block font-semibold mb-2">Habit Tracker</label>
